<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ManagerDaChoto2.0SQLite</string>
    <string name="tostadaJugadoA2">ya ha jugado ese partido</string>
    <string name="tostadaValoracionA2">la VALORACIÓN media es:</string>
    <string name="borrar">Borrar</string>
    <string name="modificar">Modificar</string>
    <string name="anadeP">Añadir partido</string>
    <string name="opciones">Opciones</string>
    <string name="dia">dia</string>
    <string name="mes">mes</string>
    <string name="ano">año</string>
    <string name="introduzcaNombre">Introduzca nombre</string>
    <string name="introduzcaTelefono">Introduzca telefono</string>
    <string name="agregaJ">Añadir jugador</string>
    <string name="modificaJ">Modificar jugador</string>
    <string name="ok">ok</string>
    <string name="cancel">cancelar</string>
    <string name="eljugador">El jugador</string>
    <string name="hasidoananido">ha sido añadido</string>
    <string name="hasidomodificado">ha sido modificado</string>
    <string name="fechaerronea">fecha erronea</string>
    <string name="introduzcaDia">¡Introduzca dia!</string>
    <string name="introduzcaMes">¡Introduzca mes!</string>
    <string name="introduzcaAno">¡Introduzca año!</string>
    <string name="tlfInc">¡Telefono incorrecto!</string>
    <string name="deseaBorrar">¿ Desea borrar el jugador seleccionado ?</string>
    <string name="importante">importante</string>
    <string name="confirmar">Confirmar</string>
    <string name="jBorrado">Jugador borrado</string>
    <string name="nombreCont">Nombre contrincante</string>
    <string name="valoracion">valoración</string>
    <string name="agrVal">Agregar Valoración</string>
    <string name="contrincante">Contrincante</string>
    <string name="idJ">id Jugador</string>
    <string name="telefono">Telefono</string>
    <string name="nombre">Nombre</string>
    <string name="fecha">Fecha Nacimiento</string>
    <string name="verP">Ver Partidos Jugados</string>
    <string name="title_activity_agregar_partido">AgregarPartido</string>
    <string name="title_activity_secundaria">Secundaria</string>
    <string name="title_activity_tercera">Tercera</string>

</resources>
