<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:id="@+id/dialogo_alta">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:weightSum="1"
        android:id="@+id/nombre">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/nombreCont"
            android:id="@+id/nomAP" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etContAP"
            android:layout_weight="0.87" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:id="@+id/valoracion"
        android:weightSum="1">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/valoracion"
            android:id="@+id/tvValAP" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etValAP"
            android:inputType="number"
            android:numeric="integer"
            android:layout_weight="0.88" />

    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/agrVal"
        android:id="@+id/buttonAP"
        android:layout_gravity="center_horizontal" />

</LinearLayout>