<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lista_detalle"

    android:layout_width="fill_parent"
    android:layout_height="85dp"
    android:orientation="horizontal"
    android:padding="6dip"
    android:gravity="center_vertical|center_horizontal">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:id="@+id/l3" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="15dp"
            android:text="@string/fecha"
            android:id="@+id/textView1"
            android:textAlignment="center"
            android:textSize="6dp"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="90dp"
            android:layout_height="65dp"
            android:id="@+id/tvTexto1"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="15dp"
            android:gravity="center_vertical|center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/l4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            android:text="@string/nombre"
            android:id="@+id/textView2"
            android:textSize="6dp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:id="@+id/tvTexto2"
            android:textSize="22dp"
            android:gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            android:text="@string/telefono"
            android:id="@+id/textView3"
            android:textSize="6dp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:id="@+id/tvTexto3"
            android:textSize="22dp"
            android:gravity="center_vertical" />
    </LinearLayout>

</LinearLayout>